# kolosal-server

./: .gitignore  CMakeLists.txt
configs/: config.json
docs/: API_FIELD_MAPPING.md
examples/: llm_metrics_usage_example.cpp
include/kolosal/: utils.hpp
include/kolosal/controllers/: auth_config_controller.hpp  base_controller.hpp  chat_completion_controller.hpp  chunking_controller.hpp  completion_controller.hpp  controller_utils.hpp  documents_controller.hpp  downloads_controller.hpp  embedding_controller.hpp  engines_controller.hpp  health_controller.hpp  internet_search_controller.hpp  models_controller.hpp  parse_document_controller.hpp  server_logs_controller.hpp
include/kolosal/metrics/: formatters.hpp  http_metrics.hpp  http_metrics_utils.hpp  llm_metrics.hpp  llm_metrics_integration.hpp  metric_registry.hpp  metric_types.hpp  metrics_tracker.hpp  request_tracker.hpp  system_metrics.hpp
include/kolosal/routes/: base_route.hpp  engines_route.hpp  health_status_route.hpp  system_metrics_route.hpp
include/kolosal/routes/retrieval/: chunking_route.hpp  documents_route.hpp  internet_search_route.hpp  parse_document_route.hpp
src/: inference_loader.cpp  main.cpp  node_manager.cpp  qdrant_client.cpp  server.cpp  server_api.cpp
src/controllers/: auth_config_controller.cpp  chat_completion_controller.cpp  chunking_controller.cpp  completion_controller.cpp  controller_utils.cpp  documents_controller.cpp  downloads_controller.cpp  embedding_controller.cpp  engines_controller.cpp  health_controller.cpp  internet_search_controller.cpp  models_controller.cpp  parse_document_controller.cpp  server_logs_controller.cpp
src/metrics/: formatters.cpp  http_metrics.cpp  http_metrics_integration.cpp  llm_metrics.cpp  metric_registry.cpp  system_metrics.cpp
src/retrieval/: document_list_types.cpp  document_service.cpp
src/routes/: downloads_route.cpp  engines_route.cpp  health_status_route.cpp  models_route.cpp  server_logs_route.cpp  system_metrics_route.cpp
src/routes/config/: auth_config_route.cpp
src/routes/llm/: completion_route.cpp  oai_completions_route.cpp
src/routes/retrieval/: chunking_route.cpp  documents_route.cpp  embedding_route.cpp  internet_search_route.cpp  parse_document_route.cpp
tests/: API_COMPATIBILITY_TEST_SUITE.md  CATCH2_TESTING_ANALYSIS.md  CMakeLists.txt  README.md
tests/api/: test_auth.cpp  test_auth_config.cpp  test_chunking.cpp  test_completions.cpp  test_documents.cpp  test_downloads.cpp  test_embeddings.cpp  test_engines.cpp  test_health.cpp  test_internet_search.cpp  test_main.cpp  test_models.cpp  test_parse_document.cpp  test_server_logs.cpp  test_simple.cpp
tests/fixtures/: test_config.json
tests/helpers/: api_client.cpp  api_client.hpp  response_validator.cpp  response_validator.hpp  test_server.cpp  test_server.hpp  test_utils.cpp  test_utils.hpp
tests/unit/: test_controllers.cpp
